force-app/main/default/objects/Settings__c/fields/AI_Companion_API_Key__c.field-meta.xml
<CustomField>
    <fullName>AI_Companion_API_Key__c</fullName>
    <label>AI Companion API Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>