force-app/main/default/objects/Settings__c/fields/MaximumVolumeSize__c.field-meta.xml
<CustomField>
    <fullName>MaximumVolumeSize__c</fullName>
    <defaultValue>10</defaultValue>
    <label>Maximum Volume Size(GB)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>