force-app/main/default/objects/Settings__c/fields/Server_URL__c.field-meta.xml
<CustomField>
    <fullName>Server_URL__c</fullName>
    <defaultValue>&quot;https://na.api.copado.com&quot;</defaultValue>
    <label>Server_URL</label>
    <type>Url</type>
</CustomField>